Changed the approach and skipping tests if the right parameter is not to unit tests as it should